--- a/style.css
+++ b/style.css
@@ -1,43 +1,159 @@
-@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');
-
-*, *::after, *::before{
-    box-sizing: border-box;
-    font-family: 'Source Code Pro', monospace;
+@import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap");
+*,
+*::after,
+*::before {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-family: "Source Code Pro", monospace;
 }
 
-body{
-    margin: 5% 8% 0 8%;
-    line-height: 250%;
-    background-color: rgb(75, 73, 73);
-    color: rgba(255, 255, 255, 0.63);
+body {
+  line-height: 250%;
+  background-color: #4b4949;
+  color: white;
 }
 
-h1{
-    color: rgba(255, 255, 255, 0.801);
-    text-align: center;
-    font-size: 400%;
-    margin-bottom: 70px;
+h1 {
+  color: white;
+  text-align: center;
+  font-size: 50px;
+  margin-bottom: 70px;
 }
 
-li{
-    font-size: large;
-    list-style: none;
+a {
+  color: gold;
+  text-decoration: none;
+  background-image: -webkit-gradient(linear, left top, right top, from(#4b4949), color-stop(gold), to(#4b4949));
+  background-image: linear-gradient(90deg, #4b4949, gold, #4b4949);
+  background-size: 0% 0px;
+  background-repeat: no-repeat;
+  background-position: bottom;
+  -webkit-transition: background-size 300ms ease;
+  transition: background-size 300ms ease;
 }
 
-a{
-    color: gold;
-    text-decoration: none;
+.real_age {
+  color: gold;
+  position: relative;
 }
 
-#projects-h1{
-    margin-top: 100px;
+.real_age::before,
+.real_age::after {
+  font-size: small;
+  position: absolute;
+  bottom: -0.5rem;
+  left: 50%;
+  -webkit-transform: translateX(-50%) translateY(100%) scale(0);
+          transform: translateX(-50%) translateY(100%) scale(0);
+  -webkit-transition: 150ms -webkit-transform;
+  transition: 150ms -webkit-transform;
+  transition: 150ms transform;
+  transition: 150ms transform, 150ms -webkit-transform;
+  -webkit-transform-origin: top center;
+          transform-origin: top center;
 }
 
-.projects-items > li{
-    display: inline;
-    margin: 0 50px;
+.real_age::before {
+  content: attr(tooltip);
+  color: white;
+  text-align: center;
+  border-radius: 10px;
+  -webkit-box-shadow: 1px 1px 10px 10px rgba(0, 0, 0, 0.1);
+          box-shadow: 1px 1px 10px 10px rgba(0, 0, 0, 0.1);
+  padding: 5px 10px 5px 10px;
+  background: #4b4949;
+  border: 0.1px solid;
 }
 
-.projects-items{
-    text-align: center;
+.real_age:hover::before,
+.real_age:hover::after {
+  -webkit-transform: translateX(-50%) translateY(100%) scale(1);
+          transform: translateX(-50%) translateY(100%) scale(1);
 }
+
+a:hover {
+  background-size: 100% 2px;
+}
+
+#projects-h1 {
+  margin-top: 100px;
+}
+
+.tree ul {
+  position: relative;
+  padding: 1em 0;
+  white-space: nowrap;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.tree ul::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.tree li {
+  display: inline-block;
+  vertical-align: top;
+  text-align: center;
+  list-style-type: none;
+  position: relative;
+  padding: 1em 0.5em 0 0.5em;
+}
+
+.tree li::before, .tree li::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 50%;
+  border-top: 1px solid #ccc;
+  width: 50%;
+  height: 1em;
+}
+
+.tree li::after {
+  right: auto;
+  left: 50%;
+  border-left: 1px solid #ccc;
+}
+
+.tree li:only-child::after, .tree li:only-child::before {
+  display: none;
+}
+
+.tree li:only-child {
+  padding-top: 0;
+}
+
+.tree li:first-child::before, .tree li:last-child::after {
+  border: 0 none;
+}
+
+.tree li:last-child::before {
+  border-right: 1px solid #ccc;
+  border-radius: 0 5px 0 0;
+}
+
+.tree li:first-child::after {
+  border-radius: 5px 0 0 0;
+}
+
+.tree ul ul::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 50%;
+  border-left: 1px solid #ccc;
+  width: 0;
+  height: 1em;
+}
+
+b {
+  font-size: 20px;
+}
+
+.video-container {
+  margin: 100px;
+}
+/*# sourceMappingURL=style.css.map */
