--- a/style.scss
+++ b/style.scss
@@ -7,10 +7,33 @@
   font-family: "Source Code Pro", monospace;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   line-height: 250%;
   background-color: rgb(75, 73, 73);
   color: white;
+  padding-top: 50px;
+}
+
+nav {
+  width: 100%;
+  height: 50px;
+  position: fixed;
+  top: 5px;
+  text-align: center;
+  z-index: 1;
+  transition: 300ms;
+}
+
+.scrolling_down {
+  transform: translateY(-100px);
+}
+
+.anchor_click {
+  opacity: 0;
 }
 
 h1 {
@@ -65,21 +88,9 @@ a:hover {
   background-size: 100% 2px;
 }
 
-#projects-h1 {
+#projects {
   margin-top: 100px;
 }
-
-// .projects-items > li {
-//   list-style-type: none;
-// }
-
-// .projects-items p {
-//   margin: 0 100px 100px 100p0;
-// }
-
-// .projects-items video {
-//   margin: 20px;
-// }
 
 $border-width: 1px;
 
@@ -100,7 +111,7 @@ $border-width: 1px;
   display: inline-block;
   vertical-align: top;
   text-align: center;
-  list-style-type: none;
+  list-style: none;
   position: relative;
   padding: 1em 0.5em 0 0.5em;
   &::before,
@@ -152,22 +163,11 @@ b {
   font-size: 20px;
 }
 
-// .video-container {
-//   margin: 100px;
-// }
-
-// .projects-items li{
-//   display: inline-block;
-//   list-style-type: none;
-// }
-
 .projects-items ul {
   margin-inline: 50px;
-  // text-align: center;
-  list-style-type: none;
+  list-style: none;
   display: inline-flex;
   margin-bottom: 80px;
-  // position: relative;
 }
 
 .projects-items li {
@@ -189,4 +189,96 @@ video {
   margin-left: auto;
   margin-right: auto;
   display: block
+}
+
+form {
+  margin: 0 auto;
+  width: 1000px;
+}
+
+form ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+form li + li {
+  margin-top: 1em;
+}
+
+label {
+  font-size: 20px;
+  display: inline-block;
+  text-align: left;
+  margin-bottom: 5px;
+}
+
+input,
+textarea {
+  width: 1000px;
+  box-sizing: border-box;
+  box-shadow: 1px 1px 10px 10px rgba(0, 0, 0, 0.1);
+  border: 0.1px solid white;
+  background-color: #4b4949;
+  border-radius: 5px;
+  color: white;
+  font-size: 20px;
+  padding: 10px;
+  transition: 300ms;
+}
+
+input:focus,
+textarea:focus {
+  outline-color: gold;
+}
+
+textarea {
+  vertical-align: top;
+  height: 13em;
+}
+
+button {
+  margin-block: 15px;
+  border-radius: 20px;
+  padding: 20px;
+  font-size: 20px;
+  background-color: #4b4949;
+  border: 0.1px solid white;
+  color: white;
+  box-shadow: 1px 1px 10px 10px rgba(0, 0, 0, 0.1);
+  transition: 300ms;
+}
+
+button:hover,
+button:focus {
+  font-weight: bold;
+  background-color: gold;
+  color: #4b4949;
+}
+
+nav button {
+  padding: 10px;
+}
+
+nav button a {
+  color: white;
+  text-decoration: none;
+  background-image: none;
+  transition: 300ms;
+  font-weight: normal;
+  background-color: #4b4949;
+  padding-inline: 100px;
+  margin: -10px;
+  padding: 10px;
+  border-radius: 20px;
+}
+
+nav button a:hover {
+  color: #4b4949;
+  font-weight: bold;
+  background-color: gold;
+}
+
+.contact_infos {
+  text-align: center;
 }
