--- a/style.scss
+++ b/style.scss
@@ -18,6 +18,11 @@ body {
   padding-top: 50px;
 }
 
+ul {
+  list-style: none;
+  padding-left: 0;
+}
+
 nav {
   width: 100%;
   height: 50px;
@@ -256,11 +261,13 @@ button:focus {
   color: #4b4949;
 }
 
-nav button {
+nav button,
+.success button {
   padding: 10px;
 }
 
-nav button a {
+nav button a,
+.success button a {
   color: white;
   text-decoration: none;
   background-image: none;
@@ -273,7 +280,8 @@ nav button a {
   border-radius: 20px;
 }
 
-nav button a:hover {
+nav button a:hover,
+.success button a:hover {
   color: #4b4949;
   font-weight: bold;
   background-color: gold;
@@ -281,4 +289,15 @@ nav button a:hover {
 
 .contact_infos {
   text-align: center;
+}
+
+.success {
+  height: 90vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.success li {
+  margin: 100px;
 }
