--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap");
-
 *,
 *::after,
 *::before {
@@ -93,23 +92,17 @@ a:hover {
   background-size: 100% 2px;
 }
 
-#projects {
-  margin-top: 100px;
-}
-
-$border-width: 1px;
-
 .tree ul {
   position: relative;
   padding: 1em 0;
   white-space: nowrap;
   margin: 0 auto;
   text-align: center;
-  &::after {
-    content: "";
-    display: table;
-    clear: both;
-  }
+}
+.tree ul::after {
+  content: "";
+  display: table;
+  clear: both;
 }
 
 .tree li {
@@ -119,39 +112,36 @@ $border-width: 1px;
   list-style: none;
   position: relative;
   padding: 1em 0.5em 0 0.5em;
-  &::before,
-  &::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    right: 50%;
-    border-top: $border-width solid #ccc;
-    width: 50%;
-    height: 1em;
-  }
-  &::after {
-    right: auto;
-    left: 50%;
-    border-left: $border-width solid #ccc;
-  }
-  &:only-child::after,
-  &:only-child::before {
-    display: none;
-  }
-  &:only-child {
-    padding-top: 0;
-  }
-  &:first-child::before,
-  &:last-child::after {
-    border: 0 none;
-  }
-  &:last-child::before {
-    border-right: $border-width solid #ccc;
-    border-radius: 0 5px 0 0;
-  }
-  &:first-child::after {
-    border-radius: 5px 0 0 0;
-  }
+}
+.tree li::before, .tree li::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 50%;
+  border-top: 1px solid #ccc;
+  width: 50%;
+  height: 1em;
+}
+.tree li::after {
+  right: auto;
+  left: 50%;
+  border-left: 1px solid #ccc;
+}
+.tree li:only-child::after, .tree li:only-child::before {
+  display: none;
+}
+.tree li:only-child {
+  padding-top: 0;
+}
+.tree li:first-child::before, .tree li:last-child::after {
+  border: 0 none;
+}
+.tree li:last-child::before {
+  border-right: 1px solid #ccc;
+  border-radius: 0 5px 0 0;
+}
+.tree li:first-child::after {
+  border-radius: 5px 0 0 0;
 }
 
 .tree ul ul::before {
@@ -159,7 +149,7 @@ $border-width: 1px;
   position: absolute;
   top: 0;
   left: 50%;
-  border-left: $border-width solid #ccc;
+  border-left: 1px solid #ccc;
   width: 0;
   height: 1em;
 }
@@ -193,7 +183,7 @@ video {
   box-shadow: 1px 1px 10px 10px rgba(0, 0, 0, 0.1);
   margin-left: auto;
   margin-right: auto;
-  display: block
+  display: block;
 }
 
 form {
@@ -308,4 +298,4 @@ nav a:hover, nav a:focus,
 .success a {
   margin: -20px;
   padding: 20px;
-}
+}/*# sourceMappingURL=style.css.map */
