--- a/styles/style.css
+++ b/styles/style.css
@@ -43,6 +43,7 @@ nav {
 h1 {
   text-align: center;
   font-size: 50px;
+  margin-top: 70px;
   margin-bottom: 70px;
 }
 
@@ -298,4 +299,28 @@ nav a:hover, nav a:focus,
 .success a {
   margin: -20px;
   padding: 20px;
+}
+
+#contactme a {
+  margin-left: 20px;
+  display: inline-block;
+  background-color: #4b4949;
+  border-radius: 10%;
+  transition: border-color 0.3s ease, transform 0.3s ease;
+  box-shadow: 0px 0px 0px 2.5px gold;
+  transform: scale(1);
+}
+
+#contactme a:hover,
+#contactme a:focus {
+  border-color: gold;
+  box-shadow: 0px 0px 6px 3px gold;
+  transform: scale(1.1);
+}
+
+#contactme img {
+  display: block;
+  width: 25px;
+  height: auto;
+  transition: transform 0.3s ease;
 }/*# sourceMappingURL=style.css.map */
