--- a/styles/style.css
+++ b/styles/style.css
@@ -12,11 +12,25 @@ html {
 
 body {
   line-height: 250%;
-  background-color: rgb(75, 73, 73);
+  background-color: #4b4949;
+  background-image: radial-gradient(circle, #545454 10%, transparent 10%), radial-gradient(circle, #404040 10%, transparent 10%);
+  background-position: 0 0, 25px 25px, 50px 50px, 75px 75px;
+  background-size: 100px 100px;
+  background-attachment: fixed;
+  animation: moveBackground 10s linear infinite;
   color: white;
+  font-size: 17px;
   padding-top: 50px;
 }
 
+@keyframes moveBackground {
+  0% {
+    background-position: 0 0;
+  }
+  100% {
+    background-position: 100px 100px;
+  }
+}
 ul {
   list-style: none;
   padding-left: 0;
@@ -159,21 +173,22 @@ b {
   font-size: 20px;
 }
 
-.projects-items ul {
+.project-items ul {
   margin-inline: 50px;
   list-style: none;
   display: inline-flex;
   margin-bottom: 80px;
 }
 
-.projects-items li {
+.project-items li {
   display: flex;
   align-items: center;
   margin-inline: 20px;
 }
 
-.projects-items p {
+.project-items p {
   border: 0.1px solid white;
+  background-color: #4b4949;
   border-radius: 10px;
   padding: 1em;
   box-shadow: 1px 1px 10px 10px rgba(0, 0, 0, 0.1);
@@ -307,7 +322,7 @@ nav a:hover, nav a:focus,
   background-color: #4b4949;
   border-radius: 10%;
   transition: border-color 0.3s ease, transform 0.3s ease;
-  box-shadow: 0px 0px 0px 2.5px gold;
+  box-shadow: 0px 0px 0px 2px gold;
   transform: scale(1);
 }
 
