--- a/styles/style.scss
+++ b/styles/style.scss
@@ -70,6 +70,11 @@ h1 {
   margin-bottom: 70px;
 }
 
+.projects-footer {
+  margin-top: 0px;
+  margin-bottom: 80px;
+}
+
 a {
   color: gold;
   text-decoration: none;
@@ -330,7 +335,7 @@ nav a:hover, nav a:focus,
   padding: 20px;
 }
 
-#projects a,
+.projects-footer a,
 #contactme a {
   margin-left: 20px;
   display: inline-block;
@@ -340,8 +345,8 @@ nav a:hover, nav a:focus,
   box-shadow: 0px 0px 0px 2px gold;
   transform: scale(1);
 }
-#projects a:hover,
-#projects a:focus,
+.projects-footer a:hover,
+.projects-footer a:focus,
 #contactme a:hover,
 #contactme a:focus {
   border-color: gold;
@@ -349,7 +354,7 @@ nav a:hover, nav a:focus,
   transform: scale(1.1);
 }
 
-#projects img,
+.projects-footer img,
 #contactme img {
   display: block;
   width: 25px;
