--- a/styles/style.css
+++ b/styles/style.css
@@ -50,20 +50,11 @@ nav {
   transform: translateY(-100px);
 }
 
-.anchor_click {
-  opacity: 0;
-}
-
 h1 {
   text-align: center;
   font-size: 50px;
   margin-top: 70px;
   margin-bottom: 70px;
-}
-
-.projects-footer {
-  margin-top: 0px;
-  margin-bottom: 80px;
 }
 
 a {
@@ -76,40 +67,54 @@ a {
   transition: background-size 300ms ease;
 }
 
-.real_age {
-  color: gold;
-  position: relative;
-}
-
-.real_age::before,
-.real_age::after {
-  font-size: small;
-  position: absolute;
-  bottom: -0.5rem;
-  left: 50%;
-  transform: translateX(-50%) translateY(100%) scale(0);
-  transition: 150ms transform;
-  transform-origin: top center;
-}
-
-.real_age::before {
-  content: attr(tooltip);
-  color: white;
-  text-align: center;
-  border-radius: 10px;
-  box-shadow: 1px 1px 10px 10px rgba(0, 0, 0, 0.1);
-  padding: 5px 10px 5px 10px;
-  background: #4b4949;
-  border: 0.1px solid;
-}
-
-.real_age:hover::before,
-.real_age:hover::after {
-  transform: translateX(-50%) translateY(100%) scale(1);
-}
-
 a:hover {
   background-size: 100% 2px;
+}
+
+b {
+  font-size: 20px;
+}
+
+button {
+  margin-block: 15px;
+  border-radius: 20px;
+  padding: 20px;
+  font-size: 20px;
+  background-color: #4b4949;
+  border: 0.1px solid white;
+  color: white;
+  box-shadow: 1px 1px 10px 10px rgba(0, 0, 0, 0.1);
+  transition: 300ms;
+}
+
+button:hover,
+button:focus {
+  font-weight: bold;
+  background-color: gold;
+  color: #4b4949;
+}
+
+nav button {
+  padding: 10px;
+}
+
+nav a {
+  color: white;
+  text-decoration: none;
+  background-image: none;
+  transition: 300ms;
+  font-weight: normal;
+  background-color: #4b4949;
+  padding-inline: 100px;
+  margin: -10px;
+  padding: 10px;
+  border-radius: 20px;
+}
+
+nav a:hover, nav a:focus {
+  color: #4b4949;
+  font-weight: bold;
+  background-color: gold;
 }
 
 .tree ul {
@@ -174,39 +179,6 @@ a:hover {
   height: 1em;
 }
 
-b {
-  font-size: 20px;
-}
-
-.project-items ul {
-  margin-inline: 50px;
-  list-style: none;
-  display: inline-flex;
-  margin-bottom: 80px;
-}
-
-.project-items li {
-  display: flex;
-  align-items: center;
-  margin-inline: 20px;
-}
-
-.project-items p {
-  border: 0.1px solid white;
-  background-color: #4b4949;
-  border-radius: 10px;
-  padding: 1em;
-  box-shadow: 1px 1px 10px 10px rgba(0, 0, 0, 0.1);
-}
-
-video {
-  border-radius: 10px;
-  box-shadow: 1px 1px 10px 10px rgba(0, 0, 0, 0.1);
-  margin-left: auto;
-  margin-right: auto;
-  display: block;
-}
-
 form {
   margin: 0 auto;
   width: 1000px;
@@ -253,52 +225,86 @@ textarea {
   height: 13em;
 }
 
-button {
-  margin-block: 15px;
-  border-radius: 20px;
-  padding: 20px;
-  font-size: 20px;
+#contactme a {
+  margin-left: 20px;
+  display: inline-block;
   background-color: #4b4949;
+  border-radius: 25%;
+  transition: border-color 0.3s ease, transform 0.3s ease;
+  box-shadow: 0px 0px 0px 2px gold;
+  transform: scale(1);
+}
+
+#contactme a:hover,
+#contactme a:focus {
+  border-color: gold;
+  box-shadow: 0px 0px 6px 3px gold;
+  transform: scale(1.1);
+}
+
+#contactme img {
+  display: block;
+  width: 25px;
+  height: auto;
+  transition: transform 0.3s ease;
+}
+
+.projects-footer {
+  margin-top: 0px;
+  margin-bottom: 80px;
+}
+
+.project-items ul {
+  margin-inline: 50px;
+  list-style: none;
+  display: inline-flex;
+  margin-bottom: 80px;
+}
+
+.project-items li {
+  display: flex;
+  align-items: center;
+  margin-inline: 20px;
+}
+
+.project-items p {
   border: 0.1px solid white;
-  color: white;
-  box-shadow: 1px 1px 10px 10px rgba(0, 0, 0, 0.1);
-  transition: 300ms;
-}
-
-button:hover,
-button:focus {
-  font-weight: bold;
-  background-color: gold;
-  color: #4b4949;
-}
-
-nav button {
-  padding: 10px;
-}
-
-nav a,
-.success a {
-  color: white;
-  text-decoration: none;
-  background-image: none;
-  transition: 300ms;
-  font-weight: normal;
   background-color: #4b4949;
-  padding-inline: 100px;
-  margin: -10px;
-  padding: 10px;
-  border-radius: 20px;
+  border-radius: 10px;
+  padding: 1em;
+  box-shadow: 1px 1px 10px 10px rgba(0, 0, 0, 0.1);
 }
 
-nav a:hover, nav a:focus,
-.success a:hover, .success a:focus {
-  color: #4b4949;
-  font-weight: bold;
-  background-color: gold;
+video {
+  border-radius: 10px;
+  box-shadow: 1px 1px 10px 10px rgba(0, 0, 0, 0.1);
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
 }
 
-.contact_infos {
-  text-align: center;
+.projects-footer a {
+  margin-left: 20px;
+  display: inline-block;
+  background-color: #4b4949;
+  border-radius: 25%;
+  transition: border-color 0.3s ease, transform 0.3s ease;
+  box-shadow: 0px 0px 0px 2px gold;
+  transform: scale(1);
+}
+
+.projects-footer a:hover,
+.projects-footer a:focus {
+  border-color: gold;
+  box-shadow: 0px 0px 6px 3px gold;
+  transform: scale(1.1);
+}
+
+.projects-footer img {
+  display: block;
+  width: 25px;
+  height: auto;
+  transition: transform 0.3s ease;
 }
 
 .success {
@@ -321,30 +327,21 @@ nav a:hover, nav a:focus,
   padding: 20px;
 }
 
-.projects-footer a,
-#contactme a {
-  margin-left: 20px;
-  display: inline-block;
+.success a {
+  color: white;
+  text-decoration: none;
+  background-image: none;
+  transition: 300ms;
+  font-weight: normal;
   background-color: #4b4949;
-  border-radius: 25%;
-  transition: border-color 0.3s ease, transform 0.3s ease;
-  box-shadow: 0px 0px 0px 2px gold;
-  transform: scale(1);
+  padding-inline: 100px;
+  margin: -10px;
+  padding: 10px;
+  border-radius: 20px;
 }
 
-.projects-footer a:hover,
-.projects-footer a:focus,
-#contactme a:hover,
-#contactme a:focus {
-  border-color: gold;
-  box-shadow: 0px 0px 6px 3px gold;
-  transform: scale(1.1);
-}
-
-.projects-footer img,
-#contactme img {
-  display: block;
-  width: 25px;
-  height: auto;
-  transition: transform 0.3s ease;
+.success a:hover, .success a:focus {
+  color: #4b4949;
+  font-weight: bold;
+  background-color: gold;
 }/*# sourceMappingURL=style.css.map */
