--- a/styles/about.css
+++ b/styles/about.css
@@ -1,3 +1,7 @@
+#me {
+  margin-bottom: 45px;
+}
+
 .tree ul {
   position: relative;
   padding: 1em 0;
@@ -58,4 +62,28 @@
   border-left: 1px solid #ccc;
   width: 0;
   height: 1em;
+}
+
+.about-paragraph {
+  display: none;
+}
+
+@media screen and (max-width: 1140px) {
+  .tree {
+    display: none;
+  }
+  .about-paragraph p {
+    border: 0.1px solid white;
+    background-color: #4b4949;
+    border-radius: 10px;
+    padding: 1em;
+    box-shadow: 1px 1px 10px 10px rgba(0, 0, 0, 0.1);
+    text-align: left;
+  }
+  .about-paragraph {
+    margin-inline: 30px;
+    margin-block: 20px;
+    font-size: 16px;
+    display: flex;
+  }
 }/*# sourceMappingURL=about.css.map */
