--- a/styles/contact.scss
+++ b/styles/contact.scss
@@ -1,58 +1,74 @@
 form {
-    margin: 0 auto;
-    width: 1000px;
-  }
+  margin: 0 auto;
+  margin-top: -30px;
+  width: 90%;
+  max-width: 1000px;
+}
+
+form ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
   
-  form ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
+form li + li {
+  margin-top: 1em;
+}
+
+label {
+  font-size: 20px;
+  display: block;
+  text-align: left;
+  margin-bottom: 5px;
+}
   
-  form li + li {
-    margin-top: 1em;
-  }
+input,
+textarea {
+  width: 100%;
+  box-sizing: border-box;
+  box-shadow: 1px 1px 10px 10px rgba(0, 0, 0, 0.1);
+  border: 0.1px solid white;
+  background-color: #4b4949;
+  border-radius: 5px;
+  color: white;
+  font-size: 20px;
+  padding: 10px;
+  transition: 300ms;
+}
+
+input:focus,
+textarea:focus {
+  outline-color: gold;
+}
   
-  label {
-    font-size: 20px;
-    display: inline-block;
-    text-align: left;
-    margin-bottom: 5px;
-  }
-  
-  input,
-  textarea {
-    width: 1000px;
-    box-sizing: border-box;
-    box-shadow: 1px 1px 10px 10px rgba(0, 0, 0, 0.1);
-    border: 0.1px solid white;
-    background-color: #4b4949;
-    border-radius: 5px;
-    color: white;
-    font-size: 20px;
-    padding: 10px;
-    transition: 300ms;
-  }
-  
-  input:focus,
-  textarea:focus {
-    outline-color: gold;
-  }
-  
-  textarea {
-    vertical-align: top;
-    height: 13em;
+textarea {
+  vertical-align: top;
+  height: auto;
+  min-height: 13em;
+}
+
+@media screen and (max-width: 600px) {
+  form {
+    margin-top: 40px;
+    width: calc(100% - 40px);
   }
 
-  #contactme a {
-    margin-left: 20px;
-    display: inline-block;
-    background-color: #4b4949;
-    border-radius: 25%;
-    transition: border-color 0.3s ease, transform 0.3s ease;
-    box-shadow: 0px 0px 0px 2px gold;
-    transform: scale(1);
+  input,
+  textarea {
+    width: calc(100% - 20px);
+    font-size: 16px;
   }
+}
+
+#contactme a {
+  margin-left: 20px;
+  display: inline-block;
+  background-color: #4b4949;
+  border-radius: 25%;
+  transition: border-color 0.3s ease, transform 0.3s ease;
+  box-shadow: 0px 0px 0px 2px gold;
+  transform: scale(1);
+}
 
 #contactme a:hover,
 #contactme a:focus {
