--- a/styles/style.scss
+++ b/styles/style.scss
@@ -27,7 +27,7 @@ body {
   animation: moveBackground 10s linear infinite;
   color: white;
   font-size: 17px;
-  padding-top: 50px;
+  padding-top: 40px;
 }
 
 @keyframes moveBackground {
@@ -54,14 +54,14 @@ nav {
   transition: 300ms;
 }
 
-.scrolling_down {
-  transform: translateY(-100px);
+.hide-nav {
+  transform: translateY(-200%);
 }
 
 h1 {
   text-align: center;
   font-size: 50px;
-  margin-top: 70px;
+  margin-top: 60px;
   margin-bottom: 70px;
 }
 
@@ -102,30 +102,71 @@ button:focus {
   color: #4b4949;
 }
 
-nav button {
-  padding: 10px;
-}
-
 nav a {
-  color: white;
-  text-decoration: none;
-  background-image: none;
-  transition: 300ms;
-  font-weight: normal;
-  background-color: #4b4949;
-  padding-inline: 100px;
-  margin: -10px;
-  padding: 10px;
+  display: inline-block;
+  margin-block: 15px;
   border-radius: 20px;
+  padding: 1px;
+  padding-inline: 10px;
+  font-size: 20px;
+  background-color: #4b4949;
+  border: 0.1px solid white;
+  color: white;
+  box-shadow: 1px 1px 10px 10px rgba(0, 0, 0, 0.1);
+  transition: 300ms;
+  text-decoration: none;
+  text-align: center;
+  background-image: none;
+  background-size: auto;
+  background-repeat: repeat;
 }
 
 nav a:hover, nav a:focus {
-  color: #4b4949;
   font-weight: bold;
   background-color: gold;
+  color: #4b4949;
+  background-image: none;
+}
+
+@media screen and (max-width: 600px) {
+  body {
+    line-height: 200%;
+    padding-top: 25px;
+  }
+  
+  h1 {
+    font-size: 40px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+  }
+  
+  nav {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    top: auto;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    transition: transform 0.3s ease-in-out;
+    height: auto;
+  }
+
+  nav a {
+    line-height: 250%;
+    font-size: 16px;
+    flex: 1;
+    margin: 0;
+    border-radius: 0;
+  }
+
+  .hide-nav {
+    transform: translateY(200%);
+  }
 }
 
 @import './about.scss';
-@import './contact.scss';
 @import './projects.scss';
+@import './contact.scss';
 @import './thankyou.scss';
