--- a/styles/thankyou.scss
+++ b/styles/thankyou.scss
@@ -1,33 +1,53 @@
 .success {
-    height: 90vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .success li {
-    margin: 150px;
-  }
-  
-  .success button {
-    font-size: 50px;
-  }
-  
-  .success a {
-    color: white;
-    text-decoration: none;
-    background-image: none;
-    transition: 300ms;
-    font-weight: normal;
-    background-color: #4b4949;
-    padding-inline: 100px;
-    margin: -20px;
-    padding: 20px;
-    border-radius: 20px;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.success h1 {
+  margin-bottom: 1em;
+}
+
+.success a {
+  display: inline-block;
+  margin: 1em 0;
+  border-radius: 20px;
+  padding: 20px;
+  font-size: 2rem;
+  background-color: #4b4949;
+  border: 0.1px solid white;
+  color: white;
+  box-shadow: 1px 1px 10px 10px rgba(0, 0, 0, 0.1);
+  transition: 300ms;
+  text-decoration: none;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+  background-image: none;
+  background-size: auto;
+  background-repeat: repeat;
+  text-align: center;
+  text-decoration: none;
+}
+
+.success a:hover,
+.success a:focus {
+  font-weight: bold;
+  background-color: gold;
+  color: #4b4949;
+}
+
+/* You don't need a media query for max-width: 600px if you want the same style on all devices */
+/* But if you need to adjust for very small screens, you can uncomment this
+@media screen and (max-width: 600px) {
+  .success h1 {
+    font-size: 3rem; // Adjust if needed for very small screens
   }
 
-  .success a:hover, .success a:focus {
-    color: #4b4949;
-    font-weight: bold;
-    background-color: gold;
+  .success a {
+    font-size: 1.5rem; // Adjust if needed for very small screens
+    padding: 15px 40px; // Adjust if needed for very small screens
   }
+}
+*/
