--- a/styles/style.css
+++ b/styles/style.css
@@ -148,6 +148,7 @@ nav a:hover, nav a:focus {
     flex: 1;
     margin: 0;
     border-radius: 0;
+    box-shadow: 0 -11px 10px 0 rgba(0, 0, 0, 0.1);
   }
   .hide-nav {
     transform: translateY(200%);
