--- a/styles/style.scss
+++ b/styles/style.scss
@@ -159,6 +159,7 @@ nav a:hover, nav a:focus {
     flex: 1;
     margin: 0;
     border-radius: 0;
+    box-shadow: 0 -11px 10px 0 rgba(0, 0, 0, 0.1);;
   }
 
   .hide-nav {
