mobile style tweaks

--- a/styles/projects.scss
+++ b/styles/projects.scss
@@ -1,6 +1,7 @@
 .projects-footer {
     margin-top: 30px;
     margin-bottom: 75px;
+    font-size: 35px;
   }
 
 .project-items {
@@ -87,6 +88,11 @@ video {
 
   .project-item {
     margin-block: 30px;
+  }
+
+  .projects-footer {
+    font-size: 30px;
+    margin-bottom: 60px;
   }
 
   .project-items p {
