--- a/styles/projects.css
+++ b/styles/projects.css
@@ -1,6 +1,7 @@
 .projects-footer {
   margin-top: 30px;
   margin-bottom: 75px;
+  font-size: 35px;
 }
 
 .project-items {
@@ -81,6 +82,10 @@ video {
   }
   .project-item {
     margin-block: 30px;
+  }
+  .projects-footer {
+    font-size: 30px;
+    margin-bottom: 60px;
   }
   .project-items p {
     width: 100%;
