--- a/styles/style.css
+++ b/styles/style.css
@@ -113,7 +113,8 @@ nav a {
   background-repeat: repeat;
 }
 
-nav a:hover, nav a:focus {
+nav a:hover,
+nav a:focus {
   font-weight: bold;
   background-color: gold;
   color: #4b4949;
@@ -470,16 +471,8 @@ textarea {
   color: #4b4949;
 }
 
-/* You don't need a media query for max-width: 600px if you want the same style on all devices */
-/* But if you need to adjust for very small screens, you can uncomment this
 @media screen and (max-width: 600px) {
-  .success h1 {
-    font-size: 3rem; // Adjust if needed for very small screens
-  }
-
   .success a {
-    font-size: 1.5rem; // Adjust if needed for very small screens
-    padding: 15px 40px; // Adjust if needed for very small screens
+    font-size: 25px;
   }
-}
-*//*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
